--- a/main.lfm
+++ b/main.lfm
@@ -6,32 +6,25 @@ object frmMonitor: TfrmMonitor
   Caption = 'Spacehack Monitor'
   ClientHeight = 460
   ClientWidth = 790
+  Font.Height = -19
+  OnClose = FormClose
   OnCreate = FormCreate
   LCLVersion = '1.6.0.4'
-  object btnSkipIntro: TButton
-    Left = 208
-    Height = 129
-    Top = 64
-    Width = 192
-    Caption = 'Skip intro'
-    OnClick = btnSkipIntroClick
-    TabOrder = 0
-  end
   object Panel1: TPanel
     Left = 0
-    Height = 56
+    Height = 80
     Top = 0
     Width = 790
     Align = alTop
-    ClientHeight = 56
+    ClientHeight = 80
     ClientWidth = 790
-    TabOrder = 1
+    TabOrder = 0
     object lblMQTTState: TLabel
       Left = 1
-      Height = 54
+      Height = 78
       Hint = 'MQTT'
       Top = 1
-      Width = 118
+      Width = 127
       Align = alLeft
       Alignment = taCenter
       AutoSize = False
@@ -42,11 +35,11 @@ object frmMonitor: TfrmMonitor
       Transparent = False
     end
     object lblC1State: TLabel
-      Left = 119
-      Height = 54
+      Left = 128
+      Height = 78
       Hint = 'Console 1'
       Top = 1
-      Width = 118
+      Width = 128
       Align = alLeft
       Alignment = taCenter
       AutoSize = False
@@ -57,11 +50,11 @@ object frmMonitor: TfrmMonitor
       Transparent = False
     end
     object lblC4State: TLabel
-      Left = 473
-      Height = 54
+      Left = 512
+      Height = 78
       Hint = 'Console 4'
       Top = 1
-      Width = 118
+      Width = 128
       Align = alLeft
       Alignment = taCenter
       AutoSize = False
@@ -72,11 +65,11 @@ object frmMonitor: TfrmMonitor
       Transparent = False
     end
     object lblC3State: TLabel
-      Left = 355
-      Height = 54
+      Left = 384
+      Height = 78
       Hint = 'Console 3'
       Top = 1
-      Width = 118
+      Width = 128
       Align = alLeft
       Alignment = taCenter
       AutoSize = False
@@ -87,11 +80,11 @@ object frmMonitor: TfrmMonitor
       Transparent = False
     end
     object lblC2State: TLabel
-      Left = 237
-      Height = 54
+      Left = 256
+      Height = 78
       Hint = 'Console 2'
       Top = 1
-      Width = 118
+      Width = 128
       Align = alLeft
       Alignment = taCenter
       AutoSize = False
@@ -102,8 +95,8 @@ object frmMonitor: TfrmMonitor
       Transparent = False
     end
     object lblLives: TLabel
-      Left = 591
-      Height = 54
+      Left = 640
+      Height = 78
       Hint = 'Lives'
       Top = 1
       Width = 65
@@ -115,8 +108,8 @@ object frmMonitor: TfrmMonitor
       ParentColor = False
     end
     object lblRound: TLabel
-      Left = 656
-      Height = 54
+      Left = 705
+      Height = 78
       Hint = 'Round'
       Top = 1
       Width = 65
@@ -128,14 +121,76 @@ object frmMonitor: TfrmMonitor
       ParentColor = False
     end
   end
-  object btnReset: TButton
-    Left = 8
-    Height = 129
-    Top = 64
-    Width = 192
-    Caption = 'Reset'
-    OnClick = btnSkipIntroClick
+  object pnlMQTTCommands: TPanel
+    Left = 0
+    Height = 380
+    Top = 80
+    Width = 232
+    Align = alLeft
+    ClientHeight = 380
+    ClientWidth = 232
+    Enabled = False
+    TabOrder = 1
+    object btnReset: TButton
+      Left = 8
+      Height = 88
+      Top = 16
+      Width = 216
+      Caption = 'End current game'
+      OnClick = btnSkipIntroClick
+      TabOrder = 0
+    end
+    object btnSkipIntro: TButton
+      Left = 8
+      Height = 89
+      Top = 112
+      Width = 216
+      Caption = 'Skip intro'
+      OnClick = btnSkipIntroClick
+      TabOrder = 1
+    end
+  end
+  object pnlSystemCommands: TPanel
+    Left = 232
+    Height = 380
+    Top = 80
+    Width = 136
+    Align = alLeft
+    ClientHeight = 380
+    ClientWidth = 136
     TabOrder = 2
+    object GroupBox1: TGroupBox
+      Left = 1
+      Height = 175
+      Top = 1
+      Width = 134
+      Align = alTop
+      Caption = 'Volume'
+      ClientHeight = 151
+      ClientWidth = 130
+      TabOrder = 0
+      object volUpDown: TUpDown
+        Left = 48
+        Height = 143
+        Top = 0
+        Width = 72
+        Increment = 0
+        Max = 2
+        Min = 0
+        OnClick = volUpDownClick
+        Position = 1
+        TabOrder = 0
+        Wrap = False
+      end
+      object pbVolume: TProgressBar
+        Left = 8
+        Height = 143
+        Top = 0
+        Width = 32
+        Orientation = pbVertical
+        TabOrder = 1
+      end
+    end
   end
   object MQTTClient1: TMQTTClient
     ClientID = 'commander'
@@ -147,6 +202,7 @@ object frmMonitor: TfrmMonitor
     top = 312
   end
   object tmrStatusLabels: TTimer
+    Enabled = False
     OnTimer = tmrStatusLabelsTimer
     left = 624
     top = 304
