--- a/main.lfm
+++ b/main.lfm
@@ -197,6 +197,26 @@ object frmMonitor: TfrmMonitor
       end
     end
   end
+  object Panel2: TPanel
+    Left = 368
+    Height = 380
+    Top = 80
+    Width = 240
+    Align = alLeft
+    BevelOuter = bvNone
+    ClientHeight = 380
+    ClientWidth = 240
+    TabOrder = 3
+    object btnPoweroffAll: TButton
+      Left = 15
+      Height = 88
+      Top = 16
+      Width = 185
+      Caption = 'Shutdown All'
+      OnClick = btnPoweroffAllClick
+      TabOrder = 0
+    end
+  end
   object MQTTClient1: TMQTTClient
     ClientID = 'commander'
     Hostname = '192.168.1.30'
