--- a/main.lfm
+++ b/main.lfm
@@ -11,7 +11,6 @@ object frmMonitor: TfrmMonitor
   OnCreate = FormCreate
   Position = poDefaultPosOnly
   LCLVersion = '1.6.0.4'
-  WindowState = wsFullScreen
   object Panel1: TPanel
     Left = 0
     Height = 80
@@ -110,7 +109,7 @@ object frmMonitor: TfrmMonitor
       Height = 80
       Hint = 'Lives'
       Top = 0
-      Width = 73
+      Width = 81
       Align = alLeft
       Alignment = taCenter
       AutoSize = False
@@ -119,7 +118,7 @@ object frmMonitor: TfrmMonitor
       ParentColor = False
     end
     object lblRound: TLabel
-      Left = 712
+      Left = 720
       Height = 80
       Hint = 'Round'
       Top = 0
@@ -211,11 +210,11 @@ object frmMonitor: TfrmMonitor
     Left = 232
     Height = 380
     Top = 80
-    Width = 216
+    Width = 424
     Align = alLeft
     BevelOuter = bvNone
     ClientHeight = 380
-    ClientWidth = 216
+    ClientWidth = 424
     TabOrder = 3
     object btnPoweroffAll: TButton
       Left = 0
@@ -227,13 +226,22 @@ object frmMonitor: TfrmMonitor
       TabOrder = 0
     end
     object btnTerminal: TButton
+      Left = 224
+      Height = 88
+      Top = 16
+      Width = 183
+      Caption = 'Open Terminal'
+      OnClick = btnTerminalClick
+      TabOrder = 1
+    end
+    object btnRebootPi: TButton
       Left = 0
       Height = 88
       Top = 112
       Width = 216
-      Caption = 'Open Terminal'
-      OnClick = btnTerminalClick
-      TabOrder = 1
+      Caption = 'Restart Server'
+      OnClick = btnRebootPiClick
+      TabOrder = 2
     end
   end
   object MQTTClient1: TMQTTClient
