--- a/main.lfm
+++ b/main.lfm
@@ -135,18 +135,18 @@ object frmMonitor: TfrmMonitor
     Left = 0
     Height = 380
     Top = 80
-    Width = 232
+    Width = 208
     Align = alLeft
     BevelOuter = bvNone
     ClientHeight = 380
-    ClientWidth = 232
+    ClientWidth = 208
     Enabled = False
     TabOrder = 1
     object btnReset: TButton
       Left = 8
       Height = 88
       Top = 16
-      Width = 216
+      Width = 192
       Caption = 'End current game'
       OnClick = btnResetClick
       TabOrder = 0
@@ -155,7 +155,7 @@ object frmMonitor: TfrmMonitor
       Left = 8
       Height = 88
       Top = 112
-      Width = 216
+      Width = 192
       Caption = 'Skip intro'
       OnClick = btnSkipIntroClick
       TabOrder = 1
@@ -207,26 +207,26 @@ object frmMonitor: TfrmMonitor
     end
   end
   object Panel2: TPanel
-    Left = 232
+    Left = 208
     Height = 380
     Top = 80
-    Width = 424
+    Width = 440
     Align = alLeft
     BevelOuter = bvNone
     ClientHeight = 380
-    ClientWidth = 424
+    ClientWidth = 440
     TabOrder = 3
     object btnPoweroffAll: TButton
       Left = 0
       Height = 88
       Top = 16
-      Width = 216
-      Caption = 'Shutdown All'
+      Width = 240
+      Caption = '↧ Shutdown All'
       OnClick = btnPoweroffAllClick
       TabOrder = 0
     end
     object btnTerminal: TButton
-      Left = 224
+      Left = 248
       Height = 88
       Top = 16
       Width = 183
@@ -235,13 +235,22 @@ object frmMonitor: TfrmMonitor
       TabOrder = 1
     end
     object btnRebootPi: TButton
+      Left = 248
+      Height = 88
+      Top = 112
+      Width = 183
+      Caption = '↻ Reboot Server'
+      OnClick = btnRebootPiClick
+      TabOrder = 2
+    end
+    object btnRestartGame: TButton
       Left = 0
       Height = 88
       Top = 112
-      Width = 216
-      Caption = 'Restart Server'
-      OnClick = btnRebootPiClick
-      TabOrder = 2
+      Width = 240
+      Caption = '↻ Restart Game Server'
+      OnClick = btnRestartGameClick
+      TabOrder = 3
     end
   end
   object MQTTClient1: TMQTTClient
